--- a/assets/stylesheets/custom.less
+++ b/assets/stylesheets/custom.less
@@ -15,7 +15,7 @@ h1 {
 
 body {
 	padding-top: 10px;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Anton', sans-serif;
 	font-weight: 200 !important;
 }
 
